alignment issues
by vaibhav

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,7 @@ body{
     transform: rotate(360deg);
   }
 }
+
+.svg-rotate{
+  transform: rotate(90deg);
+}
